existing drafts done

--- a/webplat-wg.html
+++ b/webplat-wg.html
@@ -286,47 +286,48 @@
                   These should be referenced from the <a
                   href="https://w3c.github.io/html-extensions/">HTML Extension</a> 
                   specification</dd>
-              <dt><a href="http://w3c.github.io/aria/html-aam/html-aam.html">HTML Accessibility API 
-              Mappings 1.0</a></dt>
+              <dt><a href="#1228">HTML Accessibility API 
+              Mappings 1.0</a> - <a href="http://w3c.github.io/aria/html-aam/html-aam.html">Editors' Copy</a></dt>
               <dd>How to map HTML elements and attributes to platform accessibility APIs.</dd>
-              <dt><a href="https://www.w3.org/TR/html-aria/">ARIA in HTML</a></dt>
+              <dt><a href="#1233">ARIA in HTML</a></dt>
               <dd>Describing the use of ARIA attributes on HTML elements.</dd>
-              <dt><a href="https://www.w3.org/TR/microdata/">Microdata</a></dt>
+              <dt><a href="#844">Microdata</a></dt>
               <dd>Widely-used attributes on HTML elements to provide metadata, e.g. as Schema.org or 
               Dublin Core.<br>
                 NOTE: The microdata DOM API is out of scope.</dd>
             </dl>
           </dd>
-          <dt id="manifest"><a href="http://w3c.github.io/manifest/">Manifest for Web 
-          applications</a></dt>
+          <dt id="manifest"><a href="#1138">Manifest for Web 
+          applications</a> - <a href="http://w3c.github.io/manifest/">Editors' Copy</a></dt>
           <dd>A JSON-based manifest, to provide metadata about a web application.</dd>
           <dt id="network">Network</dt>
           <dd>Specifications that allow network communications:
             <dl>
               <dt id="web-sockets"><a title="Web Sockets API" 
-              href="https://github.com/w3c/websockets/">Web Sockets API</a></dt>
+              href="#792">Web Sockets API</a> - <a title="Web Sockets API" 
+              href="https://github.com/w3c/websockets/">Editors' Copy</a></dt>
               <dd>An API to use the Web Sockets protocol for two-way communication with a remote 
               host.</dd>
             </dl>
           </dd>
-          <dt id="pointer-lock"><a href="https://w3c.github.io/pointerlock/">Pointer Lock (2nd 
-          Edition)</a></dt>
+          <dt id="pointer-lock"><a href="#1345">Pointer Lock (2nd 
+          Edition)</a> - <a href="https://w3c.github.io/pointerlock/">Editors' Copy</a</dt>
           <dd>Defines an API that provides scripted access to raw mouse movement data while locking 
           the target of mouse events to a single
             element and removing the cursor from view.</dd>
-          <dt id="push"><a href="https://w3c.github.io/push-api/">Push API</a></dt>
+          <dt id="push"><a href="#1000">Push API</a> - <a href="https://w3c.github.io/push-api/">Editors' Copy</a></dt>
           <dd>An API that provides web applications scripted access to server-sent 
           notifications.</dd>
-          <dt id="screen-orientation"><a href="https://w3c.github.io/screen-orientation/">Screen 
-          Orientation API</a></dt>
+          <dt id="screen-orientation"><a href="#1003">Screen 
+          Orientation API</a> - <a href="https://w3c.github.io/screen-orientation/">Editors' Copy</a></dt>
           <dd>An API to enable reading or locking view orientation, and notification of view 
           orientation state changes.</dd>
           <dt id="webcomponents">Web Components</dt>
           <dd>Adding custom elements to a document, with well-defined behavior and rendering.
             <dl>
-              <dt><a href="http://w3c.github.io/webcomponents/spec/custom/">Custom Elements</a></dt>
+              <dt><a href="#1038">Custom Elements</a> - <a href="https://w3c.github.io/webcomponents/spec/custom/">Editors' Copy</a</dt>
               <dd>Define and use new types of DOM elements in a document.</dd>
-              <dt><a href="http://w3c.github.io/webcomponents/spec/shadow/">Shadow DOM</a></dt>
+              <dt><a href="#1004">Shadow DOM</a> - <a href="https://w3c.github.io/webcomponents/spec/shadow/">Editors' Copy</a></dt>
               <dd>Functional boundaries between DOM trees and how these trees interact with each 
               other within a document, enabling better
                 functional encapsulation within the DOM.</dd>
@@ -335,8 +336,8 @@
           <dt id="webidl"><a href="http://heycam.github.io/webidl/">Web Interface Definition 
           Language (Web IDL)</a></dt>
           <dd>Language bindings and types for Web interface descriptions.</dd>
-          <dt id="web-workers"><a title="Web Workers" href="https://w3c.github.io/workers/">Web 
-          Workers</a></dt>
+          <dt id="web-workers"><a title="Web Workers" href="#797">Web 
+          Workers</a> - <a href="https://w3c.github.io/workers/">Editors' Copy</a</dt>
           <dd>An API that allows Web application authors to spawn background workers running scripts 
           in parallel to their main page,
             allowing for thread-like operation with message-passing as the coordination 
@@ -732,7 +733,84 @@ associated <a href='https://lists.w3.org/Archives/Member/member-cfe/2016Jun/0002
 associated <a href='https://lists.w3.org/Archives/Member/member-cfe/2016Aug/0003.html'> Call for Exclusion</a> on 18 August 2016
  ended on 15 January 2017<br>Produced under Working Group Charter: http://www.w3.org/2015/10/webplatform-charter.html</dd>
 
-      </dl>
+<dt id=1228 class='spec'><a href='https://www.w3.org/TR/html-aam-1.0/' rel='versionof'>HTML Accessibility API Mappings 1.0</a>
+ <br>Latest publication: <a href='https://www.w3.org/TR/2017/WD-html-aam-1.0-20170510/'>10 May 2017</a></dt>
+<dd>Reference Draft: 
+<a href='http://www.w3.org/TR/2015/WD-html-aam-1.0-20150407/'>http://www.w3.org/TR/2015/WD-html-aam-1.0-20150407/</a><br>
+associated <a href='https://lists.w3.org/Archives/Member/member-cfe/2015Apr/0000.html'> Call for Exclusion</a> on 09 April 2015
+ ended on 04 September 2015<br>Produced under Working Group Charter: http://www.w3.org/WAI/PF/charter201006</dd>
+
+<dt id=1233 class='spec'><a href='https://www.w3.org/TR/html-aria/' rel='versionof'>ARIA in HTML</a>
+ <br />Also developed by Web Platform Working Group.Web Platform Working Group.<br>Latest publication: <a href='https://www.w3.org/TR/2017/WD-html-aria-20170323/'>23 March 2017</a></dt>
+<dd>Reference Draft: 
+<a href='http://www.w3.org/TR/2015/WD-html-aria-20150414/'>http://www.w3.org/TR/2015/WD-html-aria-20150414/</a><br>
+associated <a href='https://lists.w3.org/Archives/Member/member-cfe/2015Apr/0005.html'> Call for Exclusion</a> on 14 April 2015
+ ended on 11 September 2015<br>Produced under Working Group Charter: https://www.w3.org/2013/09/html-charter</dd>
+
+<dt id=844 class='spec'><a href='https://www.w3.org/TR/microdata/' rel='versionof'>HTML Microdata</a>
+ <br>Latest publication: <a href='https://www.w3.org/TR/2017/WD-microdata-20170504/'>04 May 2017</a></dt>
+<dd>Reference Draft: 
+<a href='https://www.w3.org/TR/2017/WD-microdata-20170504/'>https://www.w3.org/TR/2017/WD-microdata-20170504/</a><br>
+associated <a href='https://lists.w3.org/Archives/Member/member-cfe/2017May/0001.html'> Call for Exclusion</a> on 04 May 2017
+<br><i>Exclusion opportunity will end on 30 September 2017</i><br>Produced under Working Group Charter: http://www.w3.org/2016/11/webplatform-charter.html</dd>
+
+<dt id=1138 class='spec'><a href='https://www.w3.org/TR/appmanifest/' rel='versionof'>Web App Manifest</a>
+ <br>Latest publication: <a href='https://www.w3.org/TR/2017/WD-appmanifest-20170510/'>10 May 2017</a></dt>
+<dd>Reference Draft: 
+<a href='http://www.w3.org/TR/2015/WD-appmanifest-20151124/'>http://www.w3.org/TR/2015/WD-appmanifest-20151124/</a><br>
+associated <a href='https://lists.w3.org/Archives/Member/member-cfe/2013Dec/0004.html'> Call for Exclusion</a> on 17 December 2013
+ ended on 16 May 2014<br>Produced under Working Group Charter: http://www.w3.org/2012/webapps/charter/</dd>
+
+<dt id=792 class='spec'><a href='http://www.w3.org/TR/websockets/' rel='versionof'>The WebSocket API</a>
+ <br>Latest publication: <a href='http://www.w3.org/TR/2012/CR-websockets-20120920/'>20 September 2012</a></dt>
+<dd>Reference Draft: 
+<a href='http://www.w3.org/TR/2012/WD-websockets-20120809/'>http://www.w3.org/TR/2012/WD-websockets-20120809/</a><br>
+associated <a href='https://lists.w3.org/Archives/Member/member-cfe/2012Aug/0005.html'> Call for Exclusion</a> on 09 August 2012
+ ended on 08 October 2012<br>Produced under Working Group Charter: http://www.w3.org/2012/webapps/charter/</dd>
+
+<dt id=1345 class='spec'><a href='https://www.w3.org/TR/pointerlock-2/' rel='versionof'>Pointer Lock 2.0</a>
+ <br>Latest publication: <a href='https://www.w3.org/TR/2016/WD-pointerlock-2-20161122/'>22 November 2016</a></dt>
+<dd>Reference Draft: 
+<a href='https://www.w3.org/TR/2016/WD-pointerlock-2-20161122/'>https://www.w3.org/TR/2016/WD-pointerlock-2-20161122/</a><br>
+associated <a href='https://lists.w3.org/Archives/Member/member-cfe/2016Nov/0010.html'> Call for Exclusion</a> on 22 November 2016
+ ended on 21 April 2017<br>Produced under Working Group Charter: http://www.w3.org/2016/11/webplatform-charter.html</dd>
+
+<dt id=1000 class='spec'><a href='https://www.w3.org/TR/push-api/' rel='versionof'>Push API</a>
+ <br>Latest publication: <a href='https://www.w3.org/TR/2017/WD-push-api-20170508/'>08 May 2017</a></dt>
+<dd>Reference Draft: 
+<a href='http://www.w3.org/TR/2015/WD-push-api-20151215/'>http://www.w3.org/TR/2015/WD-push-api-20151215/</a><br>
+associated <a href='https://lists.w3.org/Archives/Member/member-webapps/2012OctDec/0007.html'> Call for Exclusion</a> on 18 October 2012
+ ended on 17 March 2013<br>Produced under Working Group Charter: http://www.w3.org/2012/webapps/charter/</dd>
+
+<dt id=1003 class='spec'><a href='https://www.w3.org/TR/screen-orientation/' rel='versionof'>The Screen Orientation API</a>
+ <br>Latest publication: <a href='https://www.w3.org/TR/2016/WD-screen-orientation-20161031/'>31 October 2016</a></dt>
+<dd>Reference Draft: 
+<a href='http://www.w3.org/TR/2015/WD-screen-orientation-20151215/'>http://www.w3.org/TR/2015/WD-screen-orientation-20151215/</a><br>
+associated <a href='https://lists.w3.org/Archives/Member/member-webapps/2012AprJun/0003.html'> Call for Exclusion</a> on 22 May 2012
+ ended on 19 October 2012<br>Produced under Working Group Charter: http://www.w3.org/2010/webapps/charter/</dd>
+
+<dt id=1038 class='spec'><a href='https://www.w3.org/TR/custom-elements/' rel='versionof'>Custom Elements</a>
+ <br>Latest publication: <a href='https://www.w3.org/TR/2016/WD-custom-elements-20161013/'>13 October 2016</a></dt>
+<dd>Reference Draft: 
+<a href='http://www.w3.org/TR/2016/WD-custom-elements-20160119/'>http://www.w3.org/TR/2016/WD-custom-elements-20160119/</a><br>
+associated <a href='https://lists.w3.org/Archives/Member/member-cfe/2013Oct/0008.html'> Call for Exclusion</a> on 24 October 2013
+ ended on 23 December 2013<br>Produced under Working Group Charter: http://www.w3.org/2012/webapps/charter/</dd>
+
+<dt id=1004 class='spec'><a href='https://www.w3.org/TR/shadow-dom/' rel='versionof'>Shadow DOM</a>
+ <br>Latest publication: <a href='https://www.w3.org/TR/2017/WD-shadow-dom-20170213/'>13 February 2017</a></dt>
+<dd>Reference Draft: 
+<a href='http://www.w3.org/TR/2015/WD-shadow-dom-20151215/'>http://www.w3.org/TR/2015/WD-shadow-dom-20151215/</a><br>
+associated <a href='https://lists.w3.org/Archives/Member/member-webapps/2012AprJun/0003.html'> Call for Exclusion</a> on 22 May 2012
+ ended on 19 October 2012<br>Produced under Working Group Charter: http://www.w3.org/2010/webapps/charter/</dd>
+
+<dt id=797 class='spec'><a href='http://www.w3.org/TR/workers/' rel='versionof'>Web Workers</a>
+ <br>Latest publication: <a href='http://www.w3.org/TR/2015/WD-workers-20150924/'>24 September 2015</a></dt>
+<dd>Reference Draft: 
+<a href='http://www.w3.org/TR/2015/WD-workers-20150924/'>http://www.w3.org/TR/2015/WD-workers-20150924/</a><br>
+associated <a href='https://lists.w3.org/Archives/Member/member-webapps/2012JanMar/0007.html'> Call for Exclusion</a> on 13 March 2012
+ ended on 12 May 2012<br>Produced under Working Group Charter: http://www.w3.org/2010/webapps/charter/</dd>
+
+</dl>
      </section>
 
       <section>
