Clarifies text about deliverables in incubation and fixes  #140

--- a/webplat-wg.html
+++ b/webplat-wg.html
@@ -349,10 +349,11 @@
             mechanism.</dd>
         </dl>
         <h4>Potential deliverables</h4>
-        <p>The following deliverables may be developed as Recommendation track documents, if there 
-        is consensus in the Working Group that <a
-            href="https://wicg.github.io/admin/intent-to-migrate.html">incubation suggests 
-            success</a>:</p>
+        <p>The following documents have been identified as potential Recommendation Track 
+        deliverables, if there is consensus in the Working Group that they are <a 
+        href="https://wicg.github.io/admin/intent-to-migrate.html">ready to migrate</a>. Documents 
+        not included in this list will require a change to this charter before they are adopted by 
+        the Working Group.</p>
         <dl>
           <dt><a href="https://www.w3.org/TR/2dcontext/">HTML Canvas 2D Context</a></dt>
           <dd>An API for the 2D Context of the HTML canvas element.</dd>
