WebTV is getting renamed. Web and Mobile doesn't exist

--- a/webplat-wg.html
+++ b/webplat-wg.html
@@ -501,11 +501,7 @@
           <dt><a href="https://www.w3.org/2001/tag/">Technical Architecture Group</a></dt>
           <dd>The Web Platform WG will ask the Technical Architecture Group to review 
           specifications.</dd>
-          <dt><a href="https://www.w3.org/Mobile/IG/">Web and Mobile Interest Group</a></dt>
-          <dd>This group may provide advice or review to ensure that Web Platform WG deliverables 
-          interact correctly in the context of
-            Mobile applications.</dd>
-          <dt><a href="https://www.w3.org/2011/webtv/">Web and TV Interest Group</a></dt>
+          <dt><a href="https://www.w3.org/2011/webtv/">Media and Entertainment Interest Group</a></dt>
           <dd>This Group may review existing work, as well as the relationship between services on 
           the Web and media services, and identify
             requirements and potential solutions to ensure that the Web will function well with 
