Added more editor's copy links

--- a/webplat-wg.html
+++ b/webplat-wg.html
@@ -218,7 +218,7 @@
               Observers</a></dt>
               <dd>A specification that gives authors information about the visibility of particular 
               elements</dd>
-              <dt id="ui-events"><a href="#194">UI Events</a> - ><a 
+              <dt id="ui-events"><a href="#194">UI Events</a> - <a
               href="https://w3c.github.io/uievents/">Editors' Copy</a></dt>
               <dd>Events typically implemented by interactive user agents for user interaction such 
               as mouse and keyboard input.</dd>
@@ -247,14 +247,14 @@
               <dt><a href="http://garykac.github.io/staticrange/">Static Range</a></dt>
               <dd>A utility API defining a simple range, for optimized performance</dd>
               <dt><a href="#1323">Input Events</a> - <a 
-              href="https://w3c.github.io/input-events/"></a></dt>
+              href="https://w3c.github.io/input-events/">Editors' Copy</a></dt>
               <dd>A specification defining additions to events for text and related input to allow 
               for the monitoring and manipulation of
                 default browser behavior in the context of text editor applications and other 
                 applications that deal with text input and
                 text formatting.</dd>
               <dt><a 
-              href="https://w3c.github.io/editing/contentEditable.html">contentEditable</a></dt>
+              href="https://w3c.github.io/editing/contentEditable.html">contentEditable</a> - <a href="http://w3c.github.io/editing/contentEditable.html">Editors' Copy</a></dt>
               <dd>A specification defining new values for the <code>contentEditable</code> 
               attribute.</dd>
               <dt><a href="https://w3c.github.io/editing/execCommand.html">execCommand</a></dt>
