--- a/webplat-wg.html
+++ b/webplat-wg.html
@@ -670,8 +670,7 @@
           <br>Latest publication: <a href="https://www.w3.org/TR/2017/WD-IndexedDB-2-20170313/">13 
           March 2017</a></dt>
       <dd>Reference Draft: <a 
-      href="https://www.w3.org/TR/2016/WD-IndexedDB-2-20160818/">https://www.w3.org/TR/2016/WD-Index
-      edDB-2-20160818/</a><br>
+      href="https://www.w3.org/TR/2016/WD-IndexedDB-2-20160818/">https://www.w3.org/TR/2016/WD-IndexedDB-2-20160818/</a><br>
         associated <a href="https://lists.w3.org/Archives/Member/member-cfe/2016Aug/0003.html">Call 
         for Exclusion</a> on 18 August 2016 ended on 15 January 2017
         <br>Produced under 
@@ -682,8 +681,7 @@
  2017</a></dt>
 <dd>Reference Draft:
 <a 
-href='https://www.w3.org/TR/2017/WD-dom41-20170321/'>https://www.w3.org/TR/2017/WD-dom41-20170321/</
-a><br>
+href='https://www.w3.org/TR/2017/WD-dom41-20170321/'>https://www.w3.org/TR/2017/WD-dom41-20170321/</a><br>
 associated <a href='https://lists.w3.org/Archives/Member/member-cfe/2017Mar/0002.html'> Call for 
 Exclusion</a> on 22 March 2017
 <br><i>Exclusion opportunity will end on 18 August 2017</i><br>Produced under 
@@ -695,8 +693,7 @@ Serialization</a>
  2016</a></dt>
 <dd>Reference Draft:
 <a 
-href='https://www.w3.org/TR/2016/WD-DOM-Parsing-20160517/'>https://www.w3.org/TR/2016/WD-DOM-Parsing-2
-0160517/</a><br>
+href='https://www.w3.org/TR/2016/WD-DOM-Parsing-20160517/'>https://www.w3.org/TR/2016/WD-DOM-Parsing-20160517/</a><br>
 associated <a href='https://lists.w3.org/Archives/Member/member-cfe/2014May/0005.html'> Call for 
 Exclusion</a> on 01 May 2014
  ended on 30 June 2014<br>Produced under 
@@ -707,8 +704,7 @@ Exclusion</a> on 01 May 2014
  2016</a></dt>
 <dd>Reference Draft:
 <a 
-href='https://www.w3.org/TR/2013/WD-uievents-20130725/'>https://www.w3.org/TR/2013/WD-uievents-2013072
-5/</a><br>
+href='https://www.w3.org/TR/2013/WD-uievents-20130725/'>https://www.w3.org/TR/2013/WD-uievents-20130725/</a><br>
 associated <a href='https://lists.w3.org/Archives/Member/member-cfe/2013Jul/0008.html'> Call for 
 Exclusion</a> on 25 July 2013
  ended on 22 December 2013<br>Produced under 
@@ -720,8 +716,7 @@ KeyboardEvent code Values</a>
  2016</a></dt>
 <dd>Reference Draft:
 <a 
-href='https://www.w3.org/TR/2015/WD-uievents-code-20151215/'>https://www.w3.org/TR/2015/WD-uievents-co
-de-20151215/</a><br>
+href='https://www.w3.org/TR/2015/WD-uievents-code-20151215/'>https://www.w3.org/TR/2015/WD-uievents-code-20151215/</a><br>
 associated <a href='https://lists.w3.org/Archives/Member/member-cfe/2014Jun/0005.html'> Call for 
 Exclusion</a> on 12 June 2014
  ended on 09 November 2014<br>Produced under 
@@ -733,8 +728,7 @@ KeyboardEvent key Values</a>
  2016</a></dt>
 <dd>Reference Draft: 
 <a 
-href='https://www.w3.org/TR/2015/WD-uievents-key-20151215/'>https://www.w3.org/TR/2015/WD-uievents-key
--20151215/</a><br>
+href='https://www.w3.org/TR/2015/WD-uievents-key-20151215/'>https://www.w3.org/TR/2015/WD-uievents-key-20151215/</a><br>
 associated <a href='https://www.w3.org/2004/01/pp-impl/42538/admin'> Call for Exclusion</a> on 12 
 June 2014
  ended on 09 November 2014<br>Produced under  
@@ -746,8 +740,7 @@ API and events</a>
  December 2016</a></dt>
 <dd>Reference Draft: 
 <a 
-href='https://www.w3.org/TR/2015/WD-clipboard-apis-20151215/'>https://www.w3.org/TR/2015/WD-clipboard-
-apis-20151215/</a><br>
+href='https://www.w3.org/TR/2015/WD-clipboard-apis-20151215/'>https://www.w3.org/TR/2015/WD-clipboard-apis-20151215/</a><br>
 associated <a href='https://lists.w3.org/Archives/Member/member-webapi/2006Nov/0009.html'> Call for 
 Exclusion</a> on 16 November 2006
  ended on 14 April 2007<br>Produced under 
@@ -759,8 +752,7 @@ API</a>
  2017</a></dt>
 <dd>Reference Draft: 
 <a 
-href='https://www.w3.org/TR/2015/WD-selection-api-20151124/'>https://www.w3.org/TR/2015/WD-selection-a
-pi-20151124/</a><br>
+href='https://www.w3.org/TR/2015/WD-selection-api-20151124/'>https://www.w3.org/TR/2015/WD-selection-api-20151124/</a><br>
 associated <a href='https://lists.w3.org/Archives/Member/member-cfe/2014Oct/0002.html'> Call for 
 Exclusion</a> on 07 October 2014
  ended on 06 March 2015<br>Produced under 
@@ -772,8 +764,7 @@ Events Level 1</a>
  2017</a></dt>
 <dd>Reference Draft: 
 <a 
-href='https://www.w3.org/TR/2016/WD-input-events-20160830/'>https://www.w3.org/TR/2016/WD-input-even
-ts-20160830/</a><br>
+href='https://www.w3.org/TR/2016/WD-input-events-20160830/'>https://www.w3.org/TR/2016/WD-input-events-20160830/</a><br>
 associated <a href='https://lists.w3.org/Archives/Member/member-cfe/2016Aug/0006.html'> Call for 
 Exclusion</a> on 30 August 2016
  ended on 27 January 2017<br>Produced under 
@@ -784,16 +775,14 @@ Exclusion</a> on 30 August 2016
  2015</a></dt>
 <dd>Reference Draft: 
 <a 
-href='https://www.w3.org/TR/2015/WD-FileAPI-20150421/'>https://www.w3.org/TR/2015/WD-FileAPI-20150421/
-</a><br>
+href='https://www.w3.org/TR/2015/WD-FileAPI-20150421/'>https://www.w3.org/TR/2015/WD-FileAPI-20150421/</a><br>
 
 <dt id=979 class='spec'><a href='https://www.w3.org/TR/gamepad/' rel='versionof'>Gamepad</a>
  <br>Latest publication: <a href='https://www.w3.org/TR/2017/WD-gamepad-20170125/'>25 January 
  2017</a></dt>
 <dd>Reference Draft: 
 <a 
-href='https://www.w3.org/TR/2015/WD-gamepad-20151215/'>https://www.w3.org/TR/2015/WD-gamepad-20151215/
-</a><br>
+href='https://www.w3.org/TR/2015/WD-gamepad-20151215/'>https://www.w3.org/TR/2015/WD-gamepad-20151215/</a><br>
 associated <a href='https://lists.w3.org/Archives/Member/member-cfe/2012May/0010.html'> Call for 
 Exclusion</a> on 29 May 2012
  ended on 26 October 2012<br>Produced under 
@@ -804,8 +793,7 @@ Exclusion</a> on 29 May 2012
  2016</a></dt>
 <dd>Reference Draft: 
 <a 
-href='https://www.w3.org/TR/2016/PR-html51-20160915/'>https://www.w3.org/TR/2016/PR-html51-20160915/
-</a><br>
+href='https://www.w3.org/TR/2016/PR-html51-20160915/'>https://www.w3.org/TR/2016/PR-html51-20160915/</a><br>
 associated <a href='https://lists.w3.org/Archives/Member/member-cfe/2016Jun/0002.html'> Call for 
 Exclusion</a> on 21 June 2016
  ended on 20 August 2016<br>Produced under 
@@ -816,8 +804,7 @@ Exclusion</a> on 21 June 2016
  2017</a></dt>
 <dd>Reference Draft: 
 <a 
-href='https://www.w3.org/TR/2016/WD-html52-20160818/'>https://www.w3.org/TR/2016/WD-html52-20160818/
-</a><br>
+href='https://www.w3.org/TR/2016/WD-html52-20160818/'>https://www.w3.org/TR/2016/WD-html52-20160818/</a><br>
 associated <a href='https://lists.w3.org/Archives/Member/member-cfe/2016Aug/0003.html'> Call for 
 Exclusion</a> on 18 August 2016
  ended on 15 January 2017<br>Produced under 
@@ -829,8 +816,7 @@ Accessibility API Mappings 1.0</a>
  2017</a></dt>
 <dd>Reference Draft: 
 <a 
-href='https://www.w3.org/TR/2015/WD-html-aam-1.0-20150407/'>https://www.w3.org/TR/2015/WD-html-aam-1.0
--20150407/</a><br>
+href='https://www.w3.org/TR/2015/WD-html-aam-1.0-20150407/'>https://www.w3.org/TR/2015/WD-html-aam-1.0-20150407/</a><br>
 associated <a href='https://lists.w3.org/Archives/Member/member-cfe/2015Apr/0000.html'> Call for 
 Exclusion</a> on 09 April 2015
  ended on 04 September 2015<br>Produced under 
@@ -841,8 +827,7 @@ Exclusion</a> on 09 April 2015
  publication: <a href='https://www.w3.org/TR/2017/WD-html-aria-20170323/'>23 March 2017</a></dt>
 <dd>Reference Draft: 
 <a 
-href='https://www.w3.org/TR/2015/WD-html-aria-20150414/'>https://www.w3.org/TR/2015/WD-html-aria-20150
-414/</a><br>
+href='https://www.w3.org/TR/2015/WD-html-aria-20150414/'>https://www.w3.org/TR/2015/WD-html-aria-20150414/</a><br>
 associated <a href='https://lists.w3.org/Archives/Member/member-cfe/2015Apr/0005.html'> Call for 
 Exclusion</a> on 14 April 2015
  ended on 11 September 2015<br>Produced under 
@@ -854,8 +839,7 @@ Microdata</a>
  2017</a></dt>
 <dd>Reference Draft: 
 <a 
-href='https://www.w3.org/TR/2017/WD-microdata-20170504/'>https://www.w3.org/TR/2017/WD-microdata-201
-70504/</a><br>
+href='https://www.w3.org/TR/2017/WD-microdata-20170504/'>https://www.w3.org/TR/2017/WD-microdata-20170504/</a><br>
 associated <a href='https://lists.w3.org/Archives/Member/member-cfe/2017May/0001.html'> Call for 
 Exclusion</a> on 04 May 2017
 <br><i>Exclusion opportunity will end on 30 September 2017</i><br>Produced under Working Group 
@@ -867,8 +851,7 @@ Manifest</a>
  2017</a></dt>
 <dd>Reference Draft: 
 <a 
-href='https://www.w3.org/TR/2015/WD-appmanifest-20151124/'>https://www.w3.org/TR/2015/WD-appmanifest-2
-0151124/</a><br>
+href='https://www.w3.org/TR/2015/WD-appmanifest-20151124/'>https://www.w3.org/TR/2015/WD-appmanifest-20151124/</a><br>
 associated <a href='https://lists.w3.org/Archives/Member/member-cfe/2013Dec/0004.html'> Call for 
 Exclusion</a> on 17 December 2013
  ended on 16 May 2014<br>Produced under 
@@ -880,8 +863,7 @@ API</a>
  2012</a></dt>
 <dd>Reference Draft: 
 <a 
-href='https://www.w3.org/TR/2012/WD-websockets-20120809/'>https://www.w3.org/TR/2012/WD-websockets-201
-20809/</a><br>
+href='https://www.w3.org/TR/2012/WD-websockets-20120809/'>https://www.w3.org/TR/2012/WD-websockets-20120809/</a><br>
 associated <a href='https://lists.w3.org/Archives/Member/member-cfe/2012Aug/0005.html'> Call for 
 Exclusion</a> on 09 August 2012
  ended on 08 October 2012<br>Produced under 
@@ -893,8 +875,7 @@ Exclusion</a> on 09 August 2012
  2016</a></dt>
 <dd>Reference Draft: 
 <a 
-href='https://www.w3.org/TR/2016/WD-pointerlock-2-20161122/'>https://www.w3.org/TR/2016/WD-pointerlo
-ck-2-20161122/</a><br>
+href='https://www.w3.org/TR/2016/WD-pointerlock-2-20161122/'>https://www.w3.org/TR/2016/WD-pointerlock-2-20161122/</a><br>
 associated <a href='https://lists.w3.org/Archives/Member/member-cfe/2016Nov/0010.html'> Call for 
 Exclusion</a> on 22 November 2016
  ended on 21 April 2017<br>Produced under 
@@ -905,8 +886,7 @@ Exclusion</a> on 22 November 2016
  2017</a></dt>
 <dd>Reference Draft: 
 <a 
-href='https://www.w3.org/TR/2015/WD-push-api-20151215/'>https://www.w3.org/TR/2015/WD-push-api-2015121
-5/</a><br>
+href='https://www.w3.org/TR/2015/WD-push-api-20151215/'>https://www.w3.org/TR/2015/WD-push-api-20151215/</a><br>
 associated <a href='https://lists.w3.org/Archives/Member/member-webapps/2012OctDec/0007.html'> Call 
 for Exclusion</a> on 18 October 2012
  ended on 17 March 2013<br>Produced under 
@@ -918,8 +898,7 @@ Screen Orientation API</a>
  October 2016</a></dt>
 <dd>Reference Draft: 
 <a 
-href='https://www.w3.org/TR/2015/WD-screen-orientation-20151215/'>https://www.w3.org/TR/2015/WD-screen
--orientation-20151215/</a><br>
+href='https://www.w3.org/TR/2015/WD-screen-orientation-20151215/'>https://www.w3.org/TR/2015/WD-screen-orientation-20151215/</a><br>
 associated <a href='https://lists.w3.org/Archives/Member/member-webapps/2012AprJun/0003.html'> Call 
 for Exclusion</a> on 22 May 2012
  ended on 19 October 2012<br>Produced under 
@@ -931,8 +910,7 @@ Elements</a>
  October 2016</a></dt>
 <dd>Reference Draft: 
 <a 
-href='https://www.w3.org/TR/2016/WD-custom-elements-20160119/'>https://www.w3.org/TR/2016/WD-custom-el
-ements-20160119/</a><br>
+href='https://www.w3.org/TR/2016/WD-custom-elements-20160119/'>https://www.w3.org/TR/2016/WD-custom-elements-20160119/</a><br>
 associated <a href='https://lists.w3.org/Archives/Member/member-cfe/2013Oct/0008.html'> Call for 
 Exclusion</a> on 24 October 2013
  ended on 23 December 2013<br>Produced under 
@@ -943,8 +921,7 @@ Exclusion</a> on 24 October 2013
  2017</a></dt>
 <dd>Reference Draft: 
 <a 
-href='https://www.w3.org/TR/2015/WD-shadow-dom-20151215/'>https://www.w3.org/TR/2015/WD-shadow-dom-201
-51215/</a><br>
+href='https://www.w3.org/TR/2015/WD-shadow-dom-20151215/'>https://www.w3.org/TR/2015/WD-shadow-dom-20151215/</a><br>
 associated <a href='https://lists.w3.org/Archives/Member/member-webapps/2012AprJun/0003.html'> Call 
 for Exclusion</a> on 22 May 2012
  ended on 19 October 2012<br>Produced under 
