--- a/webplat-wg.html
+++ b/webplat-wg.html
@@ -294,8 +294,7 @@
               <dd>Describing the use of ARIA attributes on HTML elements.</dd>
               <dt><a href="#844">Microdata</a></dt>
               <dd>Widely-used attributes on HTML elements to provide metadata, e.g. as Schema.org or 
-              Dublin Core.<br>
-                NOTE: The microdata DOM API is out of scope.</dd>
+              Dublin Core.</dd>
             </dl>
           </dd>
           <dt id="manifest"><a href="#1138">Manifest for Web 
