Adds CTA WAVE as external liaison Corrects mention of Web Applications Working Group in the ECMA liaison Fixes #160

--- a/webplat-wg.html
+++ b/webplat-wg.html
@@ -523,11 +523,12 @@
           <h3 id="external-groups">External Groups</h3>
           <p>The Working Group may also collaborate with: </p>
           <dl>
-            <dt><a href="http://www.ecma-international.org/memento/TC39.htm" id="tc39">ECMA 
-            Technical Committee 39 (TC39)</a></dt>
+            <dt><a href="http://cta.tech/WAVE">Consumer Technology Association (CTA) WAVE project</a></dt>
+            <dd>The CTA WAVE project aims to improve the way internet delivered video is consumed and distributed, referencing the HTML5 standard in the process. As the Web Platform Working Group develops the HTML specification, it should liaise with the CTA WAVE project.</dd>
+            <dt><a href="http://www.ecma-international.org/memento/TC39.htm" id="tc39">ECMA Technical Committee 39 (TC39)</a></dt>
             <dd>This is the group responsible for ECMAScript standardization, and related ECMAScript 
             features like E4X. As the Web
-              Applications Working Group will be developing ECMAScript APIs, it should collaborate 
+              Platform Working Group will be developing ECMAScript APIs, it should collaborate 
               with TC39.</dd>
             <dt><a title="IETF Home Page" href="http://www.ietf.org/" id="ietf">Internet Engineering 
             Task Force</a></dt>
