Clarifies process for confirming consensus after meetings Fixes #152

--- a/webplat-wg.html
+++ b/webplat-wg.html
@@ -619,10 +619,9 @@
           becomes available.</p>
         <p><strong>Any resolution taken in a face-to-face meeting or teleconference is to be 
         considered provisional until 10 (ten) working
-            days after the publication of the resolutions in meeting minutes sent to the appropriate 
-            working group mailing list as described
+            days after the publication of the resolutions in meeting minutes. When the meeting minutes are sent to the appropriate working group mailing list as described
             in the <a href="https://github.com/w3c/WebPlatformWG/blob/gh-pages/WorkMode.md">Work 
-            Mode</a> documents. If no objections are
+            Mode</a> document, the presence of formal resolutions will be clearly indicated in the email. If no objections are
             raised on the mailing list within that time, the resolution will be considered to have 
             consensus as a resolution of the Working
             Group.</strong></p>
